--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <title>Code Quiz</title>
   </head>
 
+  <!-- here I am listing my time and view highscore sections in the header-->
   <body>
     <div class="score"><a href="./high-score.html">View Highscores</a></div>
 
     <div class="time">Time: <span id="time">0</span></div>
 
+    <!-- creating the start page where you can see the instructions-->
     <div class="main-title">
       <div id="starting-page">
         <h1 id="quiz-title">Coding Quiz Challenge</h1>
@@ -25,7 +27,7 @@
       </div>
 
       <div class="hide" id="question"></div>
-
+      <!-- end page to input your initials -->
       <div id="ending-page" class="hide">
         <h2>All done!</h2>
         <p>Your final score is <span id="final-score"></span>.</p>
